--- a/templates/login.html
+++ b/templates/login.html
@@ -21,9 +21,12 @@
     </head>
 
     <body>
+        <br>
+        <br>
         <div class="container">
-            <img src="{% static "logo.png" %}" height="150">
+            <img src="{% static "nav-logo.png" %}" height="128">
         </div>
+        <br>
         <div class="container">
             <h2><b>SHAAKO - Management Portal</b></h2>
         </div>
