--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-md" style="height: 70px">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="{% static 'logo.png' %}" width="100" height="100" class="d-inline-block align-top" alt=""/>
+          <img src="{% static 'nav-logo.png' %}" height="38" class="d-inline-block" alt=""/>
         </a>
         <a class="navbar-brand" href="#">
           <h4><b>Shaako Portal</b></h4>
